--- a/starter-projects/v15/nodebucket/package.json
+++ b/starter-projects/v15/nodebucket/package.json
@@ -13,17 +13,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.2",
-    "@angular/cdk": "^14.1.1",
+    "@angular/cdk": "^15.2.2",
     "@angular/common": "^15.2.2",
     "@angular/compiler": "^15.2.2",
     "@angular/core": "^15.2.2",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.2",
-    "@angular/material": "^14.1.1",
+    "@angular/material": "^15.2.2",
     "@angular/platform-browser": "^15.2.2",
     "@angular/platform-browser-dynamic": "^15.2.2",
     "@angular/router": "^15.2.2",
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
+    "ngx-cookie-service": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
