--- a/starter-projects/bcrs/package.json
+++ b/starter-projects/bcrs/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "ajv": "^8.12.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
     "chart.js": "^4.3.3",
     "express": "^4.18.2",
